# kvstore

./: .gitignore  CMakeLists.txt  LICENSE  README.md
proto/: kvstore.proto
src/: client.cpp  server.cpp  server_impl.h  server_main.cpp
src/config/: runtime_config.json
src/map/: BoostMap.h  IMap.h  MapFactory.h  StdMap.h
src_go/: go.mod
src_go/client/: client.go
src_go/cmd/client/: main.go
src_go/cmd/server/: main.go
src_go/proto/: key_value.proto  kvstore.pb.go  kvstore.proto  kvstore_grpc.pb.go
src_go/server/: server.go
tests/benchmark/: benchmark.go  go.mod
tests/benchmark/cmd/: main.go
tests/benchmark/raw_benchmarks/: cpp_boost_vs_map.cc  map_bench  map_vs_pool_vs_intrusive.cpp  map_vs_pool_vs_intrusive.csv
tests/benchmark/results/: benchmark_results_2025-06-03_11-23-25.csv  benchmark_results_2025-06-03_13-55-07.csv  benchmark_results_2025-06-06_10-29-10.csv  benchmark_results_2025-06-06_10-30-53.csv  benchmark_results_2025-06-13_07-34-19.csv  benchmark_results_2025-06-13_07-37-03.csv  benchmark_results_2025-06-13_07-37-35.csv  benchmark_results_2025-06-13_07-39-17.csv  benchmark_results_2025-06-13_07-39-42.csv  benchmark_results_2025-06-14_18-56-29.csv  benchmark_results_2025-06-14_18-59-40_goserver.csv  benchmark_results_2025-06-14_19-02-37_goserver.csv  benchmark_results_2025-06-14_19-03-16_goserver.csv  benchmark_results_2025-06-14_19-03-41_goserver.csv  benchmark_results_2025-06-14_19-05-56_goserver.csv  benchmark_results_2025-06-14_19-07-18_goserver.csv  benchmark_results_2025-06-14_19-07-22_goserver.csv  benchmark_results_2025-06-14_19-09-06_goserver.csv  benchmark_results_2025-06-14_19-10-13_goserver.csv  benchmark_results_2025-06-14_19-11-31_cppserver.csv  benchmark_results_2025-06-14_19-17-47_cpp_std_map.csv  benchmark_results_2025-06-14_19-27-17_cpp.csv  benchmark_results_2025-06-14_19-28-06_go.csv  benchmark_results_2025-06-14_19-38-54_cpp_shared_mutex.csv  benchmark_results_2025-06-15_11-41-54_cpp_folly.csv  benchmark_results_2025-06-15_11-51-41_cpp_folly_just_skiplist.csv  benchmark_results_2025-06-15_12-04-23_cpp_folly_just_skiplist_async_grpc.csv  benchmark_results_2025-06-15_12-05-04_cpp_folly_just_skiplist_async_grpc.csv  benchmark_results_2025-06-15_12-07-27_cpp_folly_just_skiplist_async_grpc.csv  (+17 more)
tests/e2e/: BenchmarkComparisionsMapIntrusive.ipynb  conftest.py  kvstore_pb2.py  kvstore_pb2_grpc.py  requirements.txt  run_tests.sh  test_kvstore.py
tests/unit/: CMakeLists.txt  map_test.cpp  run_tests.sh  server_test.cpp
